--- a/package.json
+++ b/package.json
@@ -3,21 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bulma": "^0.9.1",
     "contentful": "^7.14.13",
     "emailjs-com": "^2.6.4",
     "formik": "^2.2.5",
     "google-map-react": "^2.1.9",
+    "material-icons": "^0.5.1",
+    "material-ui-icons": "^1.0.0-beta.36",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-paypal-express-checkout": "^1.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
+    "react-scroll": "^1.8.1",
     "styled-components": "^5.2.0",
     "yup": "^0.29.3"
   },
